# sonar_align

./: README.md  pyproject.toml  requirements.txt
data/: sample.en  sample.fr  sample.gold.tsv
notebooks/: notebook_tester_code.py
scripts/: align_texts.py
src/sonar_bertalign/: alignment.py  embeddings.py  evaluation.py  idiom_handling.py  segmentation.py  similarity.py
tests/: test_embeddings.py  test_segmentation.py  test_similarity.py
